[gd_scene load_steps=6 format=3 uid="uid://vgchj1jxs33m"]

[ext_resource type="Texture2D" uid="uid://dgbe8puaplb6m" path="res://icon.svg" id="1_lva1x"]
[ext_resource type="Script" path="res://Scene/Trade/Script/BackPackUI/pack_item_details.gd" id="1_vgsix"]
[ext_resource type="Texture2D" uid="uid://b71aht3k303nb" path="res://Art/2D/BaseSceneUI/BagUI/BagUI_B.png" id="2_x31y5"]
[ext_resource type="Texture2D" uid="uid://cu6rodannxby4" path="res://Art/2D/BaseSceneUI/BaseUI/UI_ButtonA.png" id="3_cybjy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7akch"]
texture = ExtResource("3_cybjy")

[node name="TextureRect" type="TextureRect"]
clip_contents = true
custom_minimum_size = Vector2(500, 800)
offset_right = 500.0
offset_bottom = 800.0
texture = ExtResource("2_x31y5")
script = ExtResource("1_vgsix")

[node name="Icon" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 44.0
offset_top = 29.0
offset_right = 150.0
offset_bottom = 135.0
texture = ExtResource("1_lva1x")
expand_mode = 3
metadata/_edit_use_anchors_ = true

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 263.0
offset_top = 69.0
offset_right = 369.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 30
text = "物品名称"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(430, 370)
layout_mode = 0
offset_left = 39.0
offset_top = 168.0
offset_right = 477.0
offset_bottom = 538.0
horizontal_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(430, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20
text = "物品介绍"
autowrap_mode = 2

[node name="NumberLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 39.0
offset_top = 586.0
offset_right = 479.0
offset_bottom = 612.0
theme_override_font_sizes/font_size = 25
text = "数量：0"
metadata/_edit_use_anchors_ = true

[node name="UnitPriceLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 39.0
offset_top = 616.0
offset_right = 257.0
offset_bottom = 642.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "单价：0"
metadata/_edit_use_anchors_ = true

[node name="TotalPriceLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 261.0
offset_top = 616.0
offset_right = 479.0
offset_bottom = 642.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "总价：0"
metadata/_edit_use_anchors_ = true

[node name="UnitHeavyLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 39.0
offset_top = 646.0
offset_right = 257.0
offset_bottom = 672.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "单重：0"
metadata/_edit_use_anchors_ = true

[node name="TotalHeavyLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 261.0
offset_top = 646.0
offset_right = 479.0
offset_bottom = 672.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "总重：0"
metadata/_edit_use_anchors_ = true

[node name="DiscardButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 70)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -87.0
offset_right = 75.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_7akch")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7akch")
theme_override_styles/normal = SubResource("StyleBoxTexture_7akch")
text = "丢弃"
metadata/_edit_use_anchors_ = true
